# processers

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.bat  freertos_sim  giris.txt  install_tools.bat  run.bat
src/: FreeRTOSConfig.h  main.c  main_freertos.c  scheduler.c  scheduler.h  tasks.c
